move js and css to CDN in templates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,9 +46,12 @@
 
 {% block bodyjs %}
 <!-- Vue, Vuex, and localforage -->
-<script src="{{ url_for('static', path='vue.min.js') }}"></script>
-<script src="{{ url_for('static', path='vuex.min.js') }}"></script>
-<script src="{{ url_for('static', path='localforage.min.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+<script src="https://unpkg.com/vuex@3.6.0"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.9.0/localforage.min.js"
+    integrity="sha512-GkJRKF+k/yzHfJUg9LrNLQhS0jorQe4kES+GHkqtQThCJ5z5A1KwCXH0GYbJApDh/a3ERFvq9xbRJY9mEXzQiA=="
+    crossorigin="anonymous"></script>
+    
 <script type="application/javascript">
     // These are server settings rendered by Jinja
     const SITE_HOST = '{{ request.app.settings.SITE_HOST }}';
