remove static route, replace github icon with cdn

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,8 +21,8 @@
             {{ request.app.settings.HOST_NAME }}
         </a>
         <a href="https://github.com/seanharrison/urlly" target="_blank">
-            <img src="{{ url_for('static', path='GitHub-Mark-32px.png') }}" width="24"
-                alt="urlly on GitHub" />
+            <img src="https://raw.githubusercontent.com/rdimascio/icons/master/icons/github.svg"
+                width="24" alt="urlly on GitHub" />
         </a>
     </nav>
     {% block body %}
